[project]
name = 'ras2fim'

    
maintainers = [
    {name = "Fernando Salas", email = "fernando.salas@noaa.gov"},
    {name = "Carson Pruitt", email = "carson.pruitt@noaa.gov"},
    {name = "Ali Forghani", email = "ali.forghani@noaa.gov"},
    {name = "Bradford Bates", email = "bradford.bates@noaa.gov"},
    {name = "Emily Deardorff", email = "emily.deardorff@noaa.gov"},
    {name = "Fernando Aristizabal", email = "fernando.aristizabal@noaa.gov"},
    {name = "Greg Petrochenkov", email = "greg.petrochenkov@noaa.gov"},
    {name = "Hamideh Safa", email = "hamideh.safa@noaa.gov"},
    {name = "James Coll", email = "james.coll@noaa.gov"},
    {name = "Matt Luck", email = "matt.luck@noaa.gov"},
    {name = "Laura Keys", email = "laura.keys@noaa.gov"},
    {name = "Nick Chadwick", email = "nick.chadwick@noaa.gov"},
    {name = "Riley McDermott", email = "riley.mcdermott@noaa.gov"},
    {name = "Rob Gonzalez-Pita", email = "rob.g.pita@noaa.gov"},
    {name = "Robert Hanna", email = "robert.hanna@noaa.gov"},
    {name = "Ryan Spies", email = "ryan.spies@noaa.gov"}
]

requires-python = ">=3.8"
keywords = ["ras2fim", "mapping", "noaa"]
license = {path = "./LICENSE"}


[project.urls]
Source = "https://github.com/NOAA-OWP/ras2fim"
Wiki = "https://github.com/NOAA-OWP/ras2fim/wiki"


# - Tools -

[tool.black]
line_length = 110
skip-string-normalization = false   
skip-magic-trailing-comma = true
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 110 # It should be the same as `tool.black.line-length` above
lines_after_imports = 2
skip_gitignore = true

[tool.flake8]
count = true
doctests = true
max-complexity = 40
max-line-length = 110  # It should be the same as `tool.black.line-length` above
extend-ignore = """
    W391,
    W503,
    W605,
    E203,
    E266
    """

# Page Exceptions Notes
# If you have a page that needs to be left as an linter exception,
# please add the file name and ras2fim relative path to the section
# below. Uncomment the section once the first file is added.
# Ensure the exception code is added so it only allows for an exception
# for that file for that code.
# per-file-ignores = """
#    src/somefile.py E712
#    """