[project]
name = 'ras2fim'
    
maintainers = [
    {name = "Fernando Salas", email = "fernando.salas@noaa.gov"},
    {name = "Carson Pruitt", email = "carson.pruitt@noaa.gov"},
    {name = "Ali Forghani", email = "ali.forghani@noaa.gov"},
    {name = "Bradford Bates", email = "bradford.bates@noaa.gov"},
    {name = "Emily Deardorff", email = "emily.deardorff@noaa.gov"},
    {name = "Fernando Aristizabal", email = "fernando.aristizabal@noaa.gov"},
    {name = "Greg Petrochenkov", email = "greg.petrochenkov@noaa.gov"},
    {name = "Hamideh Safa", email = "hamideh.safa@noaa.gov"},
    {name = "James Coll", email = "james.coll@noaa.gov"},
    {name = "Matt Luck", email = "matt.luck@noaa.gov"},
    {name = "Laura Keys", email = "laura.keys@noaa.gov"},
    {name = "Nick Chadwick", email = "nick.chadwick@noaa.gov"},
    {name = "Riley McDermott", email = "riley.mcdermott@noaa.gov"},
    {name = "Rob Gonzalez-Pita", email = "rob.g.pita@noaa.gov"},
    {name = "Robert Hanna", email = "robert.hanna@noaa.gov"},
    {name = "Ryan Spies", email = "ryan.spies@noaa.gov"}
]

requires-python = ">=3.8"
keywords = ["ras2fim", "mapping", "noaa"]


[project.urls]
Source = "https://github.com/NOAA-OWP/ras2fim"
Wiki = "https://github.com/NOAA-OWP/ras2fim/wiki"


# - Tools -

[tool.black]
line_length = 110
skip-string-normalization = true   
skip-magic-trailing-comma = true


[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 110 # It should be the same as `tool.black.line-length` above
lines_after_imports = 2
skip_gitignore = true

[tool.flake8]
count = true
doctests = true
max-complexity = 50
exclude = """
    *.yaml,
    *.env,
    *.md,
    *.toml
"""

max-line-length = 110  # It should be the same as `tool.black.line-length` above
extend-ignore = """
    W391,
    W503,
    W605,
    E203,
    E266,
    """

# Page Exceptions Notes
# If you have a page that needs to be left as an linter exception,
# please add the file name and ras2fim relative path to the section
# below. 
# You can also have it ignore just one code (aka.. 901)
# Code lists can be found at:
# https://flake8.pycqa.org/en/2.5.5/warnings.html (and 4 more links near the top to other codes)

per-file-ignores = """
    src/create_shapes_from_hecras.py: F841, E731
    tools/convert_ras2fim_to_recurr_validation_datasets.py: E402
    tools/get_models_by_catalog.py: E712, E402
    tools/nws_ras2fim_clip_dem_from_shape.py: E402
    tools/nws_ras2fim_entwine_dem_from_shp.py: E402
    tools/nws_ras2fim_terrain_AWS_tiles.py: E402
    tools/nws_ras2fim_terrain_Texas.py: E402, E501
    tools/nws_ras2fim_terrain_USGS.py: E402
    tools/ras_unit_to_s3.py: E402
    tools/s3_search_tool.py: E402    
    tools/s3_shared_functions.py: E402
    """
